// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GitConfigUserName snapshot, loading 1`] = `
<div
  className="pf-v6-c-form__group"
>
  <div
    className="pf-v6-c-form__group-label"
  >
    <label
      className="pf-v6-c-form__label"
      htmlFor="gitconfig-user-name"
    >
      <span
        className="pf-v6-c-form__label-text"
      >
        name
      </span>
      <span
        aria-hidden="true"
        className="pf-v6-c-form__label-required"
      >
         
        *
      </span>
    </label>
      
  </div>
  <div
    className="pf-v6-c-form__group-control"
  >
    <div>
      <span
        className="pf-v6-c-form-control pf-m-disabled"
      >
        <input
          aria-invalid={false}
          aria-label={null}
          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={true}
          id="gitconfig-user-name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="user one"
        />
      </span>
      <span
        data-testid="validated"
      >
        default
      </span>
      <button
        aria-label={null}
        className="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-2"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe={true}
        data-testid="button-remove"
        disabled={false}
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`GitConfigUserName snapshot, not loading 1`] = `
<div
  className="pf-v6-c-form__group"
>
  <div
    className="pf-v6-c-form__group-label"
  >
    <label
      className="pf-v6-c-form__label"
      htmlFor="gitconfig-user-name"
    >
      <span
        className="pf-v6-c-form__label-text"
      >
        name
      </span>
      <span
        aria-hidden="true"
        className="pf-v6-c-form__label-required"
      >
         
        *
      </span>
    </label>
      
  </div>
  <div
    className="pf-v6-c-form__group-control"
  >
    <div>
      <span
        className="pf-v6-c-form-control"
      >
        <input
          aria-invalid={false}
          aria-label={null}
          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={false}
          id="gitconfig-user-name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="user one"
        />
      </span>
      <span
        data-testid="validated"
      >
        default
      </span>
      <button
        aria-label={null}
        className="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe={true}
        data-testid="button-remove"
        disabled={false}
        type="button"
      />
    </div>
  </div>
</div>
`;
